Add first page content

--- a/style.css
+++ b/style.css
@@ -1,6 +1,101 @@
 .bg-reddis {
   background-color: #d35266;
 }
+
 .bg-nav {
   background-color: #383838;
 }
+
+.white {
+  color: white;
+}
+
+#white {
+  color: white;
+}
+
+.reddis-color {
+  color: #d35266;
+}
+
+.col-md-3 {
+  display: inline-block;
+  margin-left: -4px;
+}
+.col-md-3 img {
+  width: 100%;
+  height: auto;
+}
+body .carousel-indicators li {
+  background-color: red;
+}
+body .carousel-control-prev-icon,
+body .carousel-control-next-icon {
+  background-color: red;
+}
+body .no-padding {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.select-store {
+  background: url("/images/storefinder_bg.png") no-repeat scroll 0 0 transparent;
+  border: medium none;
+  color: #5b5a5a;
+  font-family: UNIV-C, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  height: 32px;
+  line-height: 16px;
+  padding: 3px;
+  vertical-align: middle;
+  width: 186px;
+}
+
+/* Dropup Button */
+.dropbtn {
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropup content */
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropup content (Hidden by Default) */
+.dropup-content {
+  display: none;
+  position: absolute;
+  bottom: 50px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropup */
+.dropup-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropup links on hover */
+.dropup-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropup menu on hover */
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+/* Change the background color of the dropup button when the dropup content is shown */
+.dropup:hover .dropbtn {
+  background-color: #383838;
+}
+
